syntax = "proto3";
package proto;
import "google/api/annotations.proto";

service Product {
  rpc ProductInfo(ProductInfoRequest) returns (ProductInfoResponse) {
    option (google.api.http) = {
      get: "/api/v/product/info"
    };
  }
  rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse) {
    option (google.api.http) = {
      post: "/api/v/product/create"
      body: "*"
    };
  }
}
// 商品详情
message ProductInfoRequest {
  string referer = 1;
  int32 id = 2;
}

message ProductInfoResponse {
  string message = 1;
  int32 id = 2;
  string name = 3;
  int32 price = 4;
}

// 创建商品
message CreateProductRequest {
  string referer = 1;
  string name = 2;
  string price = 3;
}

message CreateProductResponse {
  string message = 1;
  string status = 2;
}